# secir

./: Cargo.toml  DEEP_AUDIT.md  README.md
.github/workflows/: ci.yml
data/patterns/: defaults.toml
examples/: basic.rs
src/: compose.rs  error.rs  error_catalog.rs  finding.rs  lib.rs  matcher.rs  patterns.rs  severity.rs  transport.rs
src/plugin/: loader.rs  mod.rs  registry.rs  traits.rs
src/template/: info.rs  matchers.rs  mod.rs  request.rs
