[package]
exclude = ["target/"]
name = "secir"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["CORUM COLLECTIVE LLC <engineering@corumcollective.com>"]
repository = "https://github.com/santhsecurity/secir"
description = "Security Intermediate Representation — universal type vocabulary for security scanning tools"
readme = "README.md"
keywords = ["security", "scanning", "intermediate-representation", "vulnerability", "template"]
categories = ["data-structures", "encoding"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
rustc-hash = "2.1"
schemars = { version = "0.8", features = ["chrono"], optional = true }
smallvec = "1"
toml = "0.8"
libloading = "0.8"

[features]
default = []
json-schema = ["dep:schemars"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
